terraform-aws/terra-eip.tf
/* resource "aws_eip" "my_eip" {
  instance = aws_instance.my_ec2.id
  vpc      = true
  depends_on = [
    aws_internet_gateway.my_gt
  ]
} */
